--- a/templates/tienda/tienda.html.twig
+++ b/templates/tienda/tienda.html.twig
@@ -59,7 +59,7 @@
                                 Esta es la pestaña de la tienda, puedes comprar lo que quieras pero ten en cuenta que
                                 cada 24 horas se actualiza. Corre y compra algo para lucirlo en el juego
                             </p>
-                            <div class="col-12 flex-column flex-lg-row text-center">
+                            <div class="col-12 d-flex flex-column flex-lg-row justify-content-center">
                                 <!-- Button trigger modal -->
                                 <div class="button-wrapper " data-bs-toggle="modal"
                                      data-bs-target="#exampleModal">
@@ -69,7 +69,6 @@
                                     </div>
                                 </div>
                             </div>
-
 
                             <!-- Modal -->
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
