--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,6 +26,7 @@
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
                             </div>
+                            <p id="missatgeError" class="alert-danger"></p>
                             {# read and display all flash messages #}
                             {% for label, messages in app.flashes %}
                                 {% for message in messages %}
@@ -37,7 +38,7 @@
                             {% endfor %}
                             <div class="col-12 text-center">
                                 <input type="hidden" name="_target_path" value="{{ path('perfil') }}"/>
-                                <button class="btn btn-lg btn-dark mt-2 boton-login" type="submit">
+                                <button id="enviar" class="btn btn-lg btn-dark mt-2 boton-login" type="submit">
                                     Vuelve a jugar
                                 </button>
                             </div>
@@ -51,7 +52,7 @@
         </div>
     </div>
 
-
+    <script src="{{ asset('/js/Validations_js/LoginValidate.js') }}"></script>
     </body>
 
 
