--- a/templates/inscripcion/new.html.twig
+++ b/templates/inscripcion/new.html.twig
@@ -2,4 +2,5 @@
 {% block title %}Inscripción{% endblock %}
 {% block body %}
     {{ include('inscripcion/_form.html.twig') }}
+    <script src="{{ asset('/js/Validations_js/NewInscripcionValidate.js') }}"></script>
 {% endblock %}
