--- a/templates/inscripcion/_form.html.twig
+++ b/templates/inscripcion/_form.html.twig
@@ -30,8 +30,8 @@
         </div>
     </div>
 </div>
+<script src="{{ asset('/js/Validations_js/NewInscripcionValidate.js') }}"></script>
 </body>
-<body>
 {% endblock %}
 
 
