--- a/templates/usuario/_form.html.twig
+++ b/templates/usuario/_form.html.twig
@@ -5,11 +5,12 @@
             <div class="col-12">
                 {{ form_start(form, {attr: {'novalidate': 'novalidate'}}) }}
                 {{ form_widget(form) }}
-                <button class="btn btn-primary"><i class="far fa-save"></i>
+                <button id="enviar" class="btn btn-primary"><i class="far fa-save"></i>
                     {{ button_label|default('Save') }}</button>
                 {{ form_end(form) }}
             </div>
         </div>
     </div>
+    <script src="{{ asset('/js/Validations_js/RegisterValidate.js') }}"></script>
     </body>
 {% endblock %}
