--- a/templates/usuario/new.html.twig
+++ b/templates/usuario/new.html.twig
@@ -20,6 +20,6 @@
         </div>
     </div>
 </div>
+<script src="{{ asset('/js/Validations_js/RegisterValidate.js') }}"></script>
 </body>
-<body>
 {% endblock %}
