--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -1,19 +1,17 @@
+{# templates/bundles/TwigBundle/Exception/error.html.twig #}
 {% extends 'base.html.twig' %}
-{% block title %}Error 500{% endblock %}
+{% block title %}Error 404{% endblock %}
 {% block body %}
-    <body>
-    <video id="mivideo" loop="" autoplay="autoplay" controls muted>
-        <source src="{{ asset('/fotos-web/general/videos/Torneo-error.mp4') }}" type="video/mp4"/>
-    </video>
+    <body id="body-error-fatal">
     <div class="row justify-content-center mt-1 mb-3 row-error">
         <div class="col-6 mt-5">
             <div class="card-blanca">
                 <div class="card-header text-center texto-no-torneos">
-                    ¡¿ DONDE TE CREES QUE VAS !?
+                    ¡ FATAL ERROR !
                 </div>
                 <div class="card-body">
                     <div class="alert alert-danger text-center texto-profile-ver" role="alert">
-                       ¿ Que vas a entrar o registrate estando ya dentro ?
+                        Error fatal.
                     </div>
                     <div class="col-12 justify-content-center d-flex">
                         <a class="btn btn-warning justify-content-center" href="{{ path('home') }}"><i class="fas fa-arrow-circle-left iconos-font"></i> Volver a Inicio</a>
