--- a/templates/errors/acces-error.html.twig
+++ b/templates/errors/acces-error.html.twig
@@ -7,7 +7,7 @@
     </video>
 <div class="row justify-content-center mt-1 mb-3 row-error">
     <div class="col-6 mt-5">
-        <div class="card card-error">
+        <div class="card-blanca card-error">
             <div class="card-header text-center texto-no-torneos">
                 ¡ VAYA ! TE HAS TOPADO CON UNA BARRICADA
             </div>
