FINAL ERROR CUSTOM

--- a/templates/intro.html.twig
+++ b/templates/intro.html.twig
@@ -53,9 +53,8 @@
                 </div>
                 <div class="text__quote text--expand">
 
-                </div><h5  class="text__link text--expand text-dark"> ¡Mas que<span class="text--color"> competir!</span></h5>
+                </div><h5  class="text__link text--expand text-dark"> ¡Más que<span class="text--color"> competir!</span></h5>
             </div>
         </div>
-
     </a>
 {% endblock %}
