--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -173,13 +173,13 @@
                                     {% endif %}
 
                                     {% if usuario.cuentamicrosoft %}
-                                        <p class="texto-profile-ver"><i class="fab fa-playstation text-primary"></i> {{ app.user.cuentamicrosoft }}</p>
+                                        <p class="texto-profile-ver"><i class="fab fa-xbox text-success"></i> {{ app.user.cuentamicrosoft }}</p>
                                     {% else %}
                                         <h4 class="texto-profile-ver"> ¡ Cuenta de Xbox sin vincular !</h4>
                                     {% endif %}
 
                                     {% if usuario.cuentaepic %}
-                                        <p class="texto-profile-ver"><i class="fab fa-playstation text-primary"></i> {{ app.user.cuentaepic }}</p>
+                                        <p class="texto-profile-ver"><i class="fab fa-delicious text-dark"></i> {{ app.user.cuentaepic }}</p>
                                     {% else %}
                                         <h4 class="texto-profile-ver"> ¡ Cuenta de Epic Games sin vincular !</h4>
                                     {% endif %}
